...
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    tools:context=".activity.PatternActivity">

    <com.sleepyduck.pixelate4crafting.view.PatternInteractiveView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scaleType="matrix"
        android:transitionName="@string/transitionImage"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.v7.widget.CardView
        android:id="@+id/edit_menu_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="visible">
...

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/menu_change_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_accent"
                    android:minHeight="@dimen/button_min_height"
                    android:onClick="onEditNameClicked"
                    android:text="NAME"
...
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_tiny">

                <Button
                    android:id="@+id/menu_change_pixles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_accent"
                    android:minHeight="@dimen/button_min_height"
                    android:onClick="onEditPixelsClicked"
                    android:text="PIXELS"
...
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_tiny">

                <Button
                    android:id="@+id/menu_change_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_accent"
                    android:minHeight="@dimen/button_min_height"
                    android:onClick="onEditColorsClicked"
                    android:text="COLORS"
...
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_tiny">

                <Button
                    android:id="@+id/menu_change_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_accent"
                    android:minHeight="@dimen/button_min_height"
                    android:onClick="onEditWidthClicked"
                    android:text="SIZE"
...
        android:visibility="invisible"
        app:cardBackgroundColor="@color/primary_100"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="visible">

        <com.sleepyduck.pixelate4crafting.view.ColorEditList
            android:id="@+id/color_edit_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_tiny"
            tools:ignore="UselessLeaf" />
    </android.support.v7.widget.CardView>
...
            layout="@layout/toolbar"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

    <com.sleepyduck.pixelate4crafting.view.CircleColorView
        android:id="@+id/circle_color_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:colorRadius="@dimen/color_radius"
        app:innerCircleColorCount="8"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:testColorCount="21"
        tools:visibility="visible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpenEditMenuClicked"
        android:src="@drawable/ic_editor_mode_edit"
        app:layout_anchor="@id/toolbar"
        app:layout_anchorGravity="bottom|end"
...
