...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/choose_width_description"/>

    <com.vi.swipenumberpicker.SwipeNumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:arrowColor="@color/black_87"
        app:backgroundColor="@color/primary_100"
        app:max="500"
        app:min="1"
        app:numberColor="@color/black_87"
        app:value="50"/>

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:text="50"
        android:textColor="@color/black_87"
        android:visibility="gone"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:onClick="onChooseNumberClicked"
        android:text="@string/done"/>
</LinearLayout>
