...
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="@dimen/padding_small"
            android:text="@string/pick_color_from_here" />

        <com.sleepyduck.pixelate4crafting.view.InteractiveImageView
            android:id="@+id/image_original"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="matrix"
            android:transitionName="@string/transitionImage" />

...
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="@dimen/padding_small"
            android:text="@string/approximated_pattern" />

        <com.sleepyduck.pixelate4crafting.view.ApproxPatternImageView
            android:id="@+id/image_approximated"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="matrix" />

        <TextView
...
            android:lines="1"
            android:onClick="onPaletteTextClicked"
            android:padding="@dimen/padding_small"
            android:text="@string/palette_with_text" />

        <GridView
            android:id="@+id/palette_grid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/palette_2x_size_small"
            android:columnWidth="@dimen/color_square_size_small"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:padding="@dimen/padding_small"
...
