...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="0dp">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/align_layout"
            android:layout_width="match_parent"
...
                android:layout_height="@dimen/small_picture_size"
                android:layout_margin="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lines="1"
                    tools:text="Title" />

                <com.sleepyduck.pixelate4crafting.view.recycler.UntouchableRecyclerView
                    android:id="@+id/color_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/color_grid_height"
                    app:layoutManager="com.sleepyduck.pixelate4crafting.view.recycler.GridAutoFitLayoutManager"
                    app:span="@dimen/color_square_size_small_with_margin"
                    tools:listitem="@layout/color_grid_item_small" />

...
